apps/immich/app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: halo
  labels:
    app: immich-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.1
          ports:
            - containerPort: 2283
          resources:
            requests:
              memory: "1500Mi"
              cpu: "550m"
            limits:
              memory: "2500Mi"
              cpu: "1600m"
          volumeMounts:
            - mountPath: /data
              name: upload-volume
      volumes:
        - name: upload-volume
          persistentVolumeClaim:
            claimName: immich-upload-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: halo
  labels:
    app: immich-machine-learning
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.1
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "412Mi"
              cpu: "300m"
            limits:
              memory: "1536Mi"
              cpu: "1750m"
          volumeMounts:
            - mountPath: /cache
              name: cache-volume
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: immich-cache-pvc
