apps/immich/app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: halo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx # Specify the Traefik ingress class explicitly
  rules:
  - host: immich.halo.fabseit.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 2283
  tls:
    - hosts:
        - immich.halo.fabseit.net # TLS will apply to this host
      secretName: local-fabseit-net-prod-tls # Reference to the TLS secret
